--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,14 +4,14 @@ version: 1.2.2
 homepage: https://github.com/fayis672/epub_viewer
 
 environment:
-  sdk: '>=3.3.1 <4.0.0'
+  sdk: '^3.8.0'
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_inappwebview: ^6.1.5
-  http: ^1.3.0
+  http: ^1.5.0
   json_annotation: ^4.9.0
 
 platforms:
@@ -22,8 +22,8 @@ platforms:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
-  build_runner: ^2.3.3
+  flutter_lints: ^6.0.0
+  build_runner: ^2.5.0
   json_serializable: ^6.6.0
 
 # For information on the generic Dart part of this file, see the
